k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: team-a-ingress
  namespace: team-a
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: ml.local
    http:
      paths:
      - path: /team-a(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: model-a
            port:
              number: 80
